--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Your Name – Portfolio</title>
+  <title>Abdullah Al Mizan</title>
   <meta name="description" content="Portfolio of Your Name – Web Designer & Developer. Projects, experience, CV, and contact." />
   <meta property="og:title" content="Your Name – Portfolio" />
   <meta property="og:description" content="Projects, experience, CV, and contact." />
@@ -55,7 +55,7 @@
         <!-- ===== REPLACE LOGO (optional) ===== -->
         <!-- Put your logo at assets/logo.svg and uncomment next line -->
         <!-- <img src="assets/logo.svg" alt="Logo" class="h-8 w-8"> -->
-        <span class="font-semibold tracking-tight text-lg">Your Name</span>
+        <span class="font-semibold tracking-tight text-lg">Abdullah Al Mizan</span>
       </a>
       <div class="hidden md:flex items-center gap-8 font-medium">
         <a href="#about" class="hover:text-brand">About</a>
@@ -276,7 +276,7 @@
         <p class="text-gray-600 dark:text-gray-300 mb-6">I usually reply within 24 hours. Send me a message or email me directly.</p>
         <ul class="space-y-3 text-gray-700 dark:text-gray-300">
           <!-- ===== REPLACE CONTACT DETAILS ===== -->
-          <li><i class="fa-regular fa-envelope mr-2"></i> yourname@email.com</li>
+          <li><i class="fa-regular fa-envelope mr-2"></i> gundacule@gmail.com</li>
           <li><i class="fa-solid fa-phone mr-2"></i> +8801XXXXXXXXX</li>
           <li><i class="fa-solid fa-location-dot mr-2"></i> Chattogram, Bangladesh</li>
         </ul>
@@ -299,7 +299,7 @@
   <!-- ===== FOOTER ===== -->
   <footer class="mx-auto container-pro px-4 py-10">
     <div class="flex flex-col md:flex-row items-center justify-between gap-4">
-      <p class="text-sm text-gray-500">© <span id="year"></span> Your Name. All rights reserved.</p>
+      <p class="text-sm text-gray-500">© <span id="year"></span> Abdullah Al Mizan. All rights reserved.</p>
       <div class="flex items-center gap-4 text-lg">
         <a href="#home" class="p-2 rounded-lg border border-gray-200 dark:border-gray-800" aria-label="Back to top"><i class="fa-solid fa-arrow-up"></i></a>
         <a href="#" class="hover:text-brand" aria-label="GitHub"><i class="fa-brands fa-github"></i></a>
